Continues the development.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -64,7 +64,14 @@
                 </a>
                 <a target="_blank" href="http://nnnick.github.io/Chart.js/docs-v2/" class="list-group-item">
                     <span class="badge">2.0 Beta</span> Chart.js 2
-                </a>                
+                </a>
+                <a target="_blank" href="http://openexchangerates.github.io/accounting.js/" class="list-group-item">
+                    <span class="badge">2.0 Beta</span> accounting.js
+                </a>
+                <a target="_blank" href="http://openexchangerates.github.io/money.js/" class="list-group-item">
+                    <span class="badge">2.0 Beta</span> money.js
+                </a>
+                          
             </ul>
         </div>
     </div>
