--- a/app/views/finance/financedocument.html
+++ b/app/views/finance/financedocument.html
@@ -15,7 +15,7 @@
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-10">
-        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly" translate="Common.Submit">Submit</button>
+        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly" ng-disabled="submitButtonDisabled" translate="Common.Submit">Submit</button>
             <button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
         </div>
     </div>
