Update several 3rd party libraries

--- a/app/views/finance/financereportbs.html
+++ b/app/views/finance/financereportbs.html
@@ -53,7 +53,7 @@
 				<h3 class="panel-title" translate="Finance.Incoming">Incoming</h3>
 			</div>
 			<div class="panel-body">
-				<canvas id="polar-area-inc" class="chart chart-polar-area"
+				<canvas id="polar-area-inc" class="chart chart-polar-area" width="1000" height="800"
 						chart-data="dataIncoming" chart-labels="labelsIncoming">
 				</canvas> 
 			</div>
@@ -67,7 +67,7 @@
 				<h3 class="panel-title" translate="Finance.Outgoing">Outgoing</h3>
 			</div>
 			<div class="panel-body">
-				<canvas id="polar-area-out" class="chart chart-polar-area"
+				<canvas id="polar-area-out" class="chart chart-polar-area" width="1000" height="800"
 						chart-data="dataOutgoing" chart-labels="labelsOutgoing">
 				</canvas> 
 			</div>
