--- a/app/views/finance/financereporttt.html
+++ b/app/views/finance/financereporttt.html
@@ -78,7 +78,7 @@
 		</div>			  
 		<br>
 		<br>
-		<canvas id="polar-area-inc" class="chart chart-polar-area"
+		<canvas id="polar-area-inc" class="chart chart-polar-area" width="1000" height="800"
 				chart-data="dataChartIncoming" chart-labels="labelsChartIncoming">
 		</canvas> 
 	</div>
@@ -117,7 +117,7 @@
 		</div>			  
 		<br>
 		<br>
-		<canvas id="polar-area-out" class="chart chart-polar-area"
+		<canvas id="polar-area-out" class="chart chart-polar-area" width="1000" height="800"
 				chart-data="dataChartOutgoing" chart-labels="labelsChartOutgoing">
 		</canvas> 
 	</div>
