--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -84,7 +84,7 @@
 	<br>
 	
     <div>
-		<canvas id="barCC" class="chart chart-bar" chart-options="optionsCC"
+		<canvas id="barCC" class="chart chart-bar" chart-options="optionsCC" width="1000" height="800"
  				chart-data="dataCC" chart-labels="labelsCC">
 		</canvas> 
 	</div>
