Adjust the about page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -44,7 +44,7 @@
                     <span class="badge">1.1.0</span>UI-Bootstrap</a>
                 <a target="_blank" href="http://angular-ui.github.io/ui-router/" class="list-group-item">
                     <span class="badge">0.2.16</span>UI-Router</a>
-                <a target="_blank" href="https://github.com/angular-ui/ui-tinymce" class="list-group-item">UI-tinymce</a>
+                <a target="_blank" href="https://github.com/angular-ui/ui-tinymce" class="list-group-item"><span class="badge">0.0.16</span>UI-tinymce</a>
                 <a target="_blank" href="https://github.com/lorenzofox3/Smart-Table" class="list-group-item"><span class="badge">2.1.8</span>Smart-Table</a>
                 <a target="_blank" href="http://www.bootcdn.cn/" class="list-group-item">BootCDN</a>
                 <a target="_blank" href="https://github.com/angular-ui/ui-select" class="list-group-item">UI-Select</a>
@@ -53,22 +53,12 @@
             </ul>
             
             <ul class="list-group">
-                <a target="_blank" href="https://www.angularjs.io/" class="list-group-item">
-                    <span class="badge">2.0</span> Angular JS 2.0
-                </a>
-                <a target="_blank" href="http://blog.getbootstrap.com/2015/08/19/bootstrap-4-alpha/" class="list-group-item">
-                    <span class="badge">4.0</span> Bootstrap 4.0
-                </a>
-                <a target="_blank" href="https://github.com/ng-bootstrap/core/" class="list-group-item">
-                    <span class="badge">Dev phase</span> ng-bootstrap (ui.bootstrap in AngularJS 2 and Bootstrap 4)
-                </a>
                 <a target="_blank" href="http://openexchangerates.github.io/accounting.js/" class="list-group-item">
                     <span class="badge">2.0 Beta</span> accounting.js
                 </a>
                 <a target="_blank" href="http://openexchangerates.github.io/money.js/" class="list-group-item">
                     <span class="badge">2.0 Beta</span> money.js
-                </a>
-                          
+                </a>                          
             </ul>
         </div>
     </div>
